fixed the AOS horizontal scroll bug

--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ html {
 
 body {
   background-color: var(--primary);
+  overflow-x: hidden;
 }
 
 /* navbar */
@@ -101,7 +102,8 @@ body {
   /* height: 100vh; */
   width: 100%;
   font-size: 1rem;
-  margin: 18em 0px 17em 0px;
+  margin: 8em 0px 17em 0px;
+  padding-top: 10em;
   display: flex;
   justify-content: center;
   align-items: center;
